adicionando fotos cima-baixo

--- a/01-fundamentos/bloco-03-introducao-html-css/dia-1-html-css-estruturas-da-pagina/minhapagina.html
+++ b/01-fundamentos/bloco-03-introducao-html-css/dia-1-html-css-estruturas-da-pagina/minhapagina.html
@@ -6,10 +6,12 @@
   </head>
   <body>
     <h1>Exercícios</h1>
+    <img src="https://i.ytimg.com/vi/kNmaKyMsr64/mqdefault.jpg" width= 250px alt="">
     <h2>Amigos da Trybe </h2>
     <ul> <li>Guilherme Soares</li> 
     <li>Leo Fabricio</li>
     <li>Henrique Franco</li>
     </ul>
+    <img src="maxresdefault.jpg" width= 750px  alt="">
   </body>
 </html>
