Atividades do conteudo concluidas

--- a/01-fundamentos/bloco-03-introducao-html-css/dia-1-html-css-estruturas-da-pagina/minhapagina.html
+++ b/01-fundamentos/bloco-03-introducao-html-css/dia-1-html-css-estruturas-da-pagina/minhapagina.html
@@ -6,12 +6,25 @@
   </head>
   <body>
     <h1>Exercícios</h1>
-    <img src="https://i.ytimg.com/vi/kNmaKyMsr64/mqdefault.jpg" width= 250px alt="">
+    <br>
+    <br>
+    <br>
     <h2>Amigos da Trybe </h2>
-    <ul> <li>Guilherme Soares</li> 
-    <li>Leo Fabricio</li>
-    <li>Henrique Franco</li>
+    <img src="https://i.ytimg.com/vi/kNmaKyMsr64/mqdefault.jpg" width= 550px alt="">
+    <ul>
+      <li> <a href="#BioGui"> Guilherme Soares </a> <a href="https://guilhermesoaresgarcia.github.io/"> (Portfolio)</a> </li> 
+      <li> <a href="#BioLeo"> Leo Fabricio</a> <a href="https://leofab.github.io/"> (Portfolio)</a> </li>
+      <li> <a href="#BioJaphe">Japhé </a> <a href="https://cafe51.github.io/"> (Portfolio) </a> </li>
     </ul>
-    <img src="maxresdefault.jpg" width= 750px  alt="">
+    <img src="legiao_IjQBWcKURn9w.png.jpeg" width= 550px  alt="">
+    <br>
+    <br>
+    <br>
+    <h3>Guilherme Soares</h3>
+    <p id="BioGui"><i> "Trabalho com informática desde meus 17 anos. Inicialmente, por ter afinidade com tecnologia, aprendi as coisas mexendo e ajudando amigos e parentes que tinham algum tipo de dificuldade. Com o passar do tempo, fiz diversos cursos na área."</i> </p>
+    <h3>Léo Fabrício</h3>
+    <p id="BioLeo"> <i> "Oi, sou Léo Fabrício, DEV Front-End natural de Fortaleza, Ceará."</i> </p>
+    <h3>Japhé</h3>
+    <p id="BioJaphe"> <i> "Apenas um otaku latino americano morando em Manaus" </i> </p>
   </body>
 </html>
