--- a/01-fundamentos/bloco-03-introducao-html-css/2-html-css-Primeiros-passos/index.html
+++ b/01-fundamentos/bloco-03-introducao-html-css/2-html-css-Primeiros-passos/index.html
@@ -2,33 +2,8 @@
 <html lang="pt-br">
   <head>
         <meta charset="UTF-8">
-     <title>HTML</title>
-        <style>
-
-            h1{
-                  font-family: sans-serif;
-            }
-            p{
-                  font-weight: 600; font-size: 3em; font-style: oblique;
-                   text-align: center; text-decoration: underline; 
-            }
-            body {
-                  font-size: 16px;
-            }
-            li{
-                  line-height: 100px;
-            }
-            #vermelho-lista {
-                  background-color: red;
-            }
-            #amarelo-lista {
-                  background-color: yellow;
-            }
-            #marrom-lista{
-                  background-color: brown;
-            }
-
-        </style>
+           <title>HTML</title>
+           <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
         <h1>Exercícios 3.2</h1>
