--- a/01-fundamentos/bloco-03-introducao-html-css/dia-4-html-semantico/dia-4-pratica/index.html
+++ b/01-fundamentos/bloco-03-introducao-html-css/dia-4-html-semantico/dia-4-pratica/index.html
@@ -7,7 +7,7 @@
     <title>Stomatopoda</title>
   </head>
   <body>
-        <h1><Header>Soco a 80km/h: Conheça o Stomatopoda </Header></h1>
+    <Header><h1>Soco a 80km/h: Conheça o Stomatopoda </h1></Header>
         <nav><ul class="navegation-list">
             <li class="navegation-list"> <a href=""> Pagina Inicial</li></a>
             <li class="navegation-list"><a href="">Sobre</li></a>
@@ -33,35 +33,35 @@
                             Classificação Científica
                             </th>
                         </tr>
-                        </thead>
-                <tbody>
-                    <tr>
-                        <td>Reino</td>
-                        <td>Animalia</td>
-                    </tr>
-                    <tr>
-                        <td>Filo</td>
-                        <td>arthropoda</td>
-                    </tr>
-                    <tr>
-                        <td>Subfilo</td>
-                        <td>crustacea</td>
-                    </tr>
-                    <tr>
-                        <td>Classe</td>
-                        <td>Malacostraca</td>
-                    </tr>
-                    <tr>
-                        <td>Subclasse</td>
-                        <td>Hoplocarida</td>
-                    </tr>
-                    <tr>
-                        <td>Ordem</td>
-                        <td>Stomatopoda Latreille, 1817</td>
-                    </tr>
-                </tbody>  
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Reino</td>
+                            <td>Animalia</td>
+                        </tr>
+                        <tr>
+                            <td>Filo</td>
+                            <td>arthropoda</td>
+                        </tr>
+                        <tr>
+                            <td>Subfilo</td>
+                            <td>crustacea</td>
+                        </tr>
+                        <tr>
+                            <td>Classe</td>
+                            <td>Malacostraca</td>
+                        </tr>
+                        <tr>
+                            <td>Subclasse</td>
+                            <td>Hoplocarida</td>
+                        </tr>
+                        <tr>
+                            <td>Ordem</td>
+                            <td>Stomatopoda Latreille, 1817</td>
+                        </tr>
+                    </tbody>  
                 </table>
-            </section>
+            
             <Section><h3>O olho que tudo vê</h3> 
                 <img src="./90fa72_258f3a7702e444038b3469800a50d917_mv2.jpg" alt="Stomatopoda azul e seus olhos">
                 <p>
